# rust-actix-diesel-graphql-boilerplate

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
assets/migrations/00000000000001_base/: down.sql  up.sql
assets/migrations/00000000000002_settings/: down.sql
assets/migrations/00000000000003_core/: down.sql
assets/templates/emails/setup/: config.html.hbs
backend/config/: Cargo.toml
backend/config/src/: lib.rs
backend/model/: Cargo.toml
backend/model/src/: schema.rs
backend/resolver/: Cargo.toml
backend/resolver/src/: lib.rs
backend/resolver/src/handler/setup/: mod.rs  mutation.rs  query.rs
backend/resolver/src/handler/version/: mutation.rs  query.rs
backend/resolver/src/root/: mutation.rs  query.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/server/src/pages/: mod.rs
