[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
actix-files = { workspace = true }
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-actix-web = { workspace = true }
bstr = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
hyper = { workspace = true, features = ["full"] }
once_cell = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }
pubnub = { workspace = true, features = ["full"] }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "runtime-tokio", "postgres" ] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-appender = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
user-agent-parser = { workspace = true }

config.workspace = true
library.workspace = true
resolver.workspace = true
macros.workspace = true